--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.7.0</version>
+		<version>2.7.1</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.web</groupId>
@@ -87,6 +87,12 @@
 	  <groupId>org.eclipse.persistence</groupId>
 	  <artifactId>javax.persistence</artifactId>
 	  <version>2.2.1</version>
+	 </dependency>
+	 <dependency>
+	  <groupId>org.eclipse.persistence</groupId>
+	  <artifactId>org.eclipse.persistence.jpa.modelgen.processor</artifactId>
+	  <version>2.7.9</version>
+	  <scope>provided</scope>
 	 </dependency>
 	</dependencies>
 
