--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,10 @@
-spring.datasource.url = jdbc:mysql://localhost:3306/webappdb?useSSL=false&serverTimezone=UTC&useLegacyDateTimeCode=false
+spring.datasource.url = jdbc:mysql://localhost:3306/webappdb?
+useSSL=false&serverTimezone=UTC&useLegacyDateTimeCode=false
 
 spring.datasource.username = root
 spring.datasource.password = Ag07Ti15La17$
 
-spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.ddl-auto = none
 
 spring.jpa.show-sql = true
 
